--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "suggest": {
         "metabor/statemachine": "Working implementation of the statemachine interfaces",
-        "metabor/doctrine-bridge": "Integrates Doctrine to persit and define status and processes for the statemachine"
+        "metabor/metabor-doctrine-bridge": "Integrates Doctrine to persit and define status and processes for the statemachine"
     },
     "autoload": {
         "psr-0": {
