--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "require": {
         "php": ">=5.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.1"
+    },
     "suggest": {
         "metabor/statemachine": "Working implementation of the statemachine interfaces",
         "metabor/statemachine-doctrine-bridge": "Integrates Doctrine to persit and define status and processes for the statemachine"
