--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "*"
     },
     "suggest": {
         "metabor/statemachine": "Working implementation of the statemachine interfaces"
@@ -27,7 +27,7 @@
     "minimum-stability":"dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1.x-dev"
+            "dev-master": "1.2.x-dev"
         }
     }
 }
