--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "metabor/metabor-std",
-    "description": "Collection of maximal independent PHP Interfaces",
+    "description": "Collection of maximal independent PHP 7.2 Interfaces",
     "keywords": ["interfaces", "api", "standard"],
     "license": "MIT",
     "authors": [
@@ -10,24 +10,27 @@
         }
     ],
     "require": {
-        "php": ">=5.3"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "^8.2.3",
+        "rector/rector": "^0.5.5",
+        "symplify/easy-coding-standard": "^6.0.3"
     },
     "suggest": {
         "metabor/statemachine": "Working implementation of the statemachine interfaces"
     },
     "autoload": {
-        "psr-0": {
-        	"MetaborStd\\": "src/"
+        "psr-4": {
+        	"MetaborStd\\": "src/MetaborStd",
+            "MetaborStd\\Tests\\": "tests/MetaborStd"
         }
     },
     "prefer-stable":true,
     "minimum-stability":"dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "3.0.x-dev"
         }
     }
 }
